--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,13 +9,13 @@ pipeline {
 	stages{
 		stage('Compile Stage'){
 		    steps{
-		     bat 'mvn compile'		
+		     sh 'mvn compile'		
 		        }		
 		    }	
 
        stage('Test Stage'){
 		    steps{
-		     bat 'mvn test'		
+		     sh 'mvn test'		
 		    }
 		    
 		    post {
@@ -27,7 +27,7 @@ pipeline {
 
        stage('Package Stage'){
 		    steps{
-		     bat 'mvn package'		
+		     sh 'mvn package'		
 		        }		
 		    }
 	   
